--- a/about.html
+++ b/about.html
@@ -117,8 +117,7 @@
                         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">About Us</h5>
                         <h1 class="display-4">Best Medical Care For Yourself and Your Family</h1>
                     </div>
-                    <p>Healthline covers all facets of physical and mental health openly and objectively because were here for the whole person — for your whole life. And because people come to us with unique challenges, we listen closely and put empathy first across our organization. In everything from our personal perspectives to our commitment to inclusivity, you all see that we feel with you.
-                    </p>
+                    <p>Healthline covers all facets of physical and mental health openly and objectively because here for the whole person — for your whole life. And because people come to us with unique challenges, we listen closely and put empathy first across our organization. In everything from our personal perspectives to our commitment to inclusivity, you all see that we feel with you </p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
