--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="d-inline-flex align-items-center">
                         <a class="text-decoration-none text-body pe-3" href=""><i class="bi bi-telephone me-2"></i>+91 9849345652</a>
                         <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>healthline.info.com</a>
+                        <a class="text-decoration-none text-body px-3" href=""><i class="bi bi-envelope me-2"></i>healthline@info.com</a>
                     </div>
                 </div>
                 <div class="col-md-6 text-center text-lg-end">
@@ -213,7 +213,7 @@
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
-                                <h3>Smita Nandini</h3>
+                                <h3>Sai Hemanth</h3>
                                 <h6 class="fw-normal fst-italic text-primary mb-4">Cardiology Specialist</h6>
                                 <p class="m-0">Degree in medicine
                                     5 years of residency training 
@@ -235,7 +235,7 @@
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
-                                <h3>Sai </h3>
+                                <h3>Sai Nandini </h3>
                                 <h6 class="fw-normal fst-italic text-primary mb-4">Cardiology Specialist</h6>
                                 <p class="m-0">Degree in medicine
                                     5 years of residency training 
